# cyd-lvgl-esp-idf

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  config.h  hardware.h  idf_component.yml  lcd.c  lcd.h  main.c  speedometer.c  speedometer.h  task_lvgl.c  task_lvgl.h  touch.c
